--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script>
       tailwind.config = {
         theme: {
-          extend: { boxShadow: { card: "0 10px 24px rgba(16,24,40,0.06)" } },
+          extend: {
+            boxShadow: { card: "0 10px 24px rgba(16,24,40,0.06)" },
+          },
         },
       };
     </script>
@@ -30,6 +32,38 @@
       .pb-4\.5 {
         padding-bottom: 1.125rem;
       }
+      /* Grid for interests */
+      .interests-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 0.75rem;
+      }
+      .interest-item {
+        aspect-ratio: 1/1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 0.5rem;
+        border-radius: 0.75rem;
+        font-size: 0.875rem;
+        font-weight: 500;
+        transition: all 0.2s ease;
+      }
+      .interest-item.selected {
+        background-color: #e0e7ff;
+        color: #4f46e5;
+        border: 2px solid #818cf8;
+      }
+      .interest-item:not(.selected) {
+        background-color: #f9fafb;
+        color: #374151;
+        border: 1px solid #e5e7eb;
+      }
+      .interest-item:not(.selected):hover {
+        background-color: #f3f4f6;
+        border-color: #d1d5db;
+      }
     </style>
   </head>
   <body class="min-h-screen bg-gradient-to-br from-indigo-50 to-purple-50">
@@ -46,9 +80,15 @@
           </div>
           <h1 class="text-xl font-bold text-gray-800">Learn Quick</h1>
         </div>
+        <!-- Interests Button -->
+        <button
+          id="header-interests-btn"
+          class="text-purple-600 font-medium text-sm hover:text-purple-700 flex items-center gap-1"
+        >
+          Interests <i class="fas fa-cog"></i>
+        </button>
       </div>
     </header>
-
     <!-- Feed View -->
     <main class="max-w-md mx-auto pb-20" id="main-content">
       <div id="feed-view" class="space-y-6 px-4 py-4">
@@ -70,17 +110,14 @@
             </button>
           </div>
         </div>
-
         <div id="for-you-content">
           <h2 class="text-lg font-semibold text-gray-800 mb-4 mt-12">
             For You
           </h2>
         </div>
-
         <div id="by-you-content" class="hidden">
           <h2 class="text-lg font-semibold text-gray-800 mb-4 mt-12">By You</h2>
         </div>
-
         <!-- Infinite Scroll Trigger -->
         <div
           id="loading-indicator"
@@ -90,7 +127,6 @@
         </div>
       </div>
     </main>
-
     <!-- Deep Dive Modal -->
     <div
       id="deep-dive-modal"
@@ -126,31 +162,26 @@
         </div>
       </div>
     </div>
-
     <!-- Interests Modal -->
     <div
       id="interests-modal"
       class="fixed inset-0 bg-black/50 flex items-center justify-center p-4 z-50 hidden"
     >
-      <div
-        class="bg-white rounded-2xl p-6 max-w-sm w-full max-h-[80vh] overflow-y-auto"
-      >
+      <div class="bg-white rounded-2xl p-6 max-w-sm w-full">
         <h3 class="text-xl font-bold text-gray-800 mb-2">
           Choose Your Interests
         </h3>
-        <p class="text-gray-600 mb-6">
-          Select as many topics as you'd like to personalize your feed
-        </p>
-        <div id="interests-list" class="space-y-3"></div>
+        <p class="text-gray-600 mb-4">Select topics to personalize your feed</p>
+        <div id="interests-list" class="interests-grid mb-4"></div>
         <button
           id="save-interests-btn"
-          class="w-full mt-6 py-3 rounded-xl font-medium bg-indigo-600 text-white hover:bg-indigo-700 transition-colors"
+          class="w-full py-3 rounded-xl font-medium bg-indigo-600 text-white hover:bg-indigo-700 transition-colors disabled:opacity-50"
+          disabled
         >
           Start Learning (0 selected)
         </button>
       </div>
     </div>
-
     <!-- Navigation -->
     <nav
       class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 max-w-md mx-auto"
@@ -193,7 +224,6 @@
         </a>
       </div>
     </nav>
-
     <script>
       // =============== 1. Expanded categories (10 total) ===============
       const categories = [
@@ -208,12 +238,10 @@
         "Art",
         "Sports",
       ];
-
       // =============== 2. Pre-added knowledge cards: 5 per category ===============
       function generateMockCards() {
         const cards = [];
         let id = 1;
-
         // Realistic, engaging titles and content per category
         const contentByCategory = {
           History: [
@@ -587,8 +615,6 @@
             },
           ],
         };
-
-        const categories = Object.keys(contentByCategory);
         const images = {
           History: "https://placehold.co/400x200/ea580c/ffffff?text=History",
           Business: "https://placehold.co/400x200/059669/ffffff?text=Business",
@@ -602,7 +628,6 @@
           Art: "https://placehold.co/400x200/be185d/ffffff?text=Art",
           Sports: "https://placehold.co/400x200/1e40af/ffffff?text=Sports",
         };
-
         categories.forEach((category) => {
           contentByCategory[category].forEach((item) => {
             cards.push({
@@ -616,23 +641,18 @@
             });
           });
         });
-
         return cards;
       }
-
       let allKnowledgeCards = generateMockCards();
-
       // =============== 3. Randomize initial card order ===============
       const shuffleArray = (arr) => [...arr].sort(() => Math.random() - 0.5);
       let mockKnowledgeCards = shuffleArray([...allKnowledgeCards]);
-
       // =============== State ===============
       let isLoggedIn = true;
-      let userInterests = ["History", "Business", "How-To"];
+      let userInterests = []; // Empty by default
       let savedCards = new Set([1, 2, 4]);
       let feedType = "forYou";
       let hasLoadedMore = false;
-
       // =============== DOM Elements ===============
       const feedTypeButtons = {
         forYou: document.getElementById("for-you-btn"),
@@ -643,14 +663,12 @@
         byYou: document.getElementById("by-you-content"),
       };
       const loadingIndicator = document.getElementById("loading-indicator");
-
       // =============== Init ===============
       function init() {
         setupEventListeners();
         renderFeed();
         setupInfiniteScroll();
       }
-
       function setupEventListeners() {
         feedTypeButtons.forYou.addEventListener("click", () =>
           setFeedType("forYou")
@@ -664,8 +682,11 @@
         document
           .getElementById("save-interests-btn")
           .addEventListener("click", saveInterests);
+        // Add event listener for the new interests button in header
+        document
+          .getElementById("header-interests-btn")
+          .addEventListener("click", showInterestsModal);
       }
-
       // =============== Feed Type Logic ===============
       function setFeedType(type) {
         feedType = type;
@@ -686,19 +707,14 @@
         }
         renderFeed();
       }
-
       function handleByYouAccess() {
         if (!isLoggedIn) {
           alert("Please log in to access your personalized feed");
           return;
         }
-        if (userInterests.length === 0) {
-          showInterestsModal();
-        } else {
-          setFeedType("byYou");
-        }
+        // Always show modal when clicking "By You" since no interests are selected by default
+        showInterestsModal();
       }
-
       // =============== Render Logic ===============
       function renderFeed() {
         if (feedType === "forYou") {
@@ -715,7 +731,6 @@
           }
         }
       }
-
       function renderCards(cards, container, isSavedView) {
         container.innerHTML = `<h2 class="text-lg font-semibold text-gray-800 mb-4 mt-12">${
           feedType === "forYou" ? "For You" : "By You"
@@ -798,18 +813,16 @@
               btn.innerHTML = '<i class="fas fa-bookmark text-purple-600"></i>';
             }
           });
-          cardDiv
-            .querySelector(".share-btn")
-            .addEventListener("click", () =>
-              alert(`Shared: "${card.title}"\n${card.summary}`)
-            );
+          cardDiv.querySelector(".share-btn").addEventListener("click", () =>
+            alert(`Shared: "${card.title}"
+${card.summary}`)
+          );
           cardDiv
             .querySelector(".deep-dive-btn")
             .addEventListener("click", () => showDeepDive(card));
           container.appendChild(cardDiv);
         });
       }
-
       function showDeepDive(card) {
         document.getElementById("deep-dive-title").textContent = card.title;
         document.getElementById("deep-dive-image").src = card.image;
@@ -818,32 +831,27 @@
           card.deepDive;
         document.getElementById("deep-dive-modal").classList.remove("hidden");
       }
-
       // =============== Interests Modal ===============
       function showInterestsModal() {
         document.getElementById("interests-modal").classList.remove("hidden");
         renderInterestsList();
       }
-
       function renderInterestsList() {
         const container = document.getElementById("interests-list");
         container.innerHTML = "";
+
         categories.forEach((category) => {
           const button = document.createElement("button");
-          button.className = `w-full p-3 text-left rounded-xl border transition-colors ${
-            userInterests.includes(category)
-              ? "border-indigo-500 bg-indigo-50 text-indigo-700"
-              : "border-gray-200 hover:bg-gray-50"
+          button.className = `interest-item ${
+            userInterests.includes(category) ? "selected" : ""
           }`;
-          button.innerHTML =
-            category +
-            (userInterests.includes(category)
-              ? '<span class="float-right">✓</span>'
-              : "");
+          button.textContent = category;
           button.addEventListener("click", () => {
-            if (userInterests.includes(category))
+            if (userInterests.includes(category)) {
               userInterests = userInterests.filter((i) => i !== category);
-            else userInterests.push(category);
+            } else {
+              userInterests.push(category);
+            }
             renderInterestsList();
             updateSaveButton();
           });
@@ -851,18 +859,16 @@
         });
         updateSaveButton();
       }
-
       function updateSaveButton() {
-        document.getElementById(
-          "save-interests-btn"
-        ).textContent = `Start Learning (${userInterests.length} selected)`;
+        const saveBtn = document.getElementById("save-interests-btn");
+        const count = userInterests.length;
+        saveBtn.textContent = `Start Learning (${count} selected)`;
+        saveBtn.disabled = count === 0;
       }
-
       function saveInterests() {
         document.getElementById("interests-modal").classList.add("hidden");
         setFeedType("byYou");
       }
-
       // =============== Infinite Scroll (Simulated API) ===============
       function setupInfiniteScroll() {
         let ticking = false;
@@ -881,12 +887,10 @@
           }
         });
       }
-
       function loadMoreContent() {
         if (hasLoadedMore) return;
         hasLoadedMore = true;
         loadingIndicator.classList.remove("hidden");
-
         // Simulate API delay
         setTimeout(() => {
           // Generate 10 more random cards (simulating fresh data)
@@ -896,7 +900,6 @@
           loadingIndicator.classList.add("hidden");
         }, 800);
       }
-
       // =============== Start App ===============
       init();
     </script>
