--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       };
     </script>
     <style>
+        #header-interests-btn{
+            background-color: #fbf8fc;
+            padding: 12px;
+            border-radius: 12px;
+            border: .5px solid rgb(243, 235, 243);
+        }
       .card {
         border-top: 3px solid purple;
         box-shadow: 0 10px 24px rgba(16, 24, 40, 0.06);
